# ARTED

./: CMakeLists.txt  build
RT/: hpsi_RT.f90
main/: ms.f90  sc.f90
modules/: opt_variables.f90
platform/: pgi-openmpi_acc_cuda.cmake
stencil/: CMakeLists.txt
stencil/CUDA/: hpsi_stencil_cuda.cu
stencil/F90/: current.f90
